[gd_scene load_steps=10 format=3 uid="uid://dkeopr6i3dupk"]

[ext_resource type="Script" path="res://Scripts/Prefabs/Powerup/power_up.gd" id="1_vdkw8"]

[sub_resource type="CanvasTexture" id="CanvasTexture_mq5mw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7ko4"]
size = Vector2(58, 58)

[sub_resource type="Animation" id="Animation_ofyj2"]
resource_name = "Drop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(3.4822, 1),
"update": 0,
"values": [Vector2(116, 116), Vector2(58, 58)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.707107, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_a6xh1"]
resource_name = "Drop - Texture"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(3.48, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.707, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_34fx8"]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(58, 58)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gf8to"]
resource_name = "RESET - Texture"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_llx80"]
_data = {
"Drop": SubResource("Animation_ofyj2"),
"Drop - Texture": SubResource("Animation_a6xh1"),
"RESET": SubResource("Animation_34fx8"),
"RESET - Texture": SubResource("Animation_gf8to")
}

[sub_resource type="Environment" id="Environment_keid7"]
background_mode = 3
glow_enabled = true
glow_hdr_scale = 0.0

[node name="PowerUp" type="Area2D" groups=["PowerUp"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_vdkw8")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
scale = Vector2(58, 58)
texture = SubResource("CanvasTexture_mq5mw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_f7ko4")

[node name="Show" type="Timer" parent="."]
wait_time = 0.05

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_llx80")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_keid7")

[connection signal="body_entered" from="." to="." method="Player_Contact"]
[connection signal="timeout" from="Show" to="." method="Self_Show"]
